manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spencer-cit270
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spencer-cit270
  template:
    metadata:
      labels:
        app: spencer-cit270
    spec:
      containers:
      - name: spencer-cit270
        image: labyrinth246/cit270
        command: ["npm"]
        args: ["run","start"]
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: ".125"
            memory: "500Mi"
          requests:
            cpu: ".1"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: spencer-cit270-loadbalancer
spec:
  selector:
    app: spencer-cit270
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spencer-cit270-ingress
  namespace: default
  annotations:
    ngix.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - spencer.cit270.com
    secretName: spencerbaker-dev-tls
  rules:
  - host: spencer.cit270.com
    http:
      paths:
      - backend:
          serviceName: spencer-cit270-loadbalancer
          servicePort: 80
